fix: remove /beanstalkd URL prefix
Legacy from previous website location.

Fixes #3.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset=utf-8>
   <title>{{ page.title }} &ndash; beanstalkd</title>
-  <link rel=stylesheet href=/beanstalkd/css/base.css type=text/css>
+  <link rel=stylesheet href=/css/base.css type=text/css>
   <link href=http://feeds.feedburner.com/beanstalkd
     title='News for beanstalkd' rel=alternate type=application/atom+xml>
   <script type="text/javascript" src="http://use.typekit.com/qgr2kmt.js"></script>
@@ -12,7 +12,7 @@
 <body>
 
 <header>
-  <h1><a href=/beanstalkd/>beanstalkd</a></h1>
+  <h1><a href=/>beanstalkd</a></h1>
 </header>
 
 <div id=content>
@@ -21,7 +21,7 @@
 
 <nav>
   <menu>
-    <li><a href=/beanstalkd/download.html>Download</a>
+    <li><a href=/download.html>Download</a>
     <li><a href=http://wiki.github.com/kr/beanstalkd/client-libraries>Client&nbsp;Libraries</a>
     <li><a href=http://wiki.github.com/kr/beanstalkd/faq>FAQ</a>
     <li><a href=https://groups.google.com/forum/#!forum/beanstalk-talk>Mailing&nbsp;List</a>
