Fixes broken links
Signed-off-by: Thomas Parrott <tomp@tomp.uk>

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,8 +22,8 @@
 <nav>
   <menu>
     <li><a href=/download.html>Download</a>
-    <li><a href=http://wiki.github.com/kr/beanstalkd/client-libraries>Client&nbsp;Libraries</a>
-    <li><a href=http://wiki.github.com/kr/beanstalkd/faq>FAQ</a>
+    <li><a href=https://github.com/beanstalkd/beanstalkd/wiki/Client-Libraries>Client&nbsp;Libraries</a>
+    <li><a href=https://github.com/beanstalkd/beanstalkd/wiki/FAQ>FAQ</a>
     <li><a href=https://groups.google.com/forum/#!forum/beanstalk-talk>Mailing&nbsp;List</a>
   </menu>
 </nav>
