--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,10 +4,7 @@
   <meta charset=utf-8>
   <title>{{ page.title }} &ndash; beanstalkd</title>
   <link rel=stylesheet href=/css/base.css type=text/css>
-  <link href=http://feeds.feedburner.com/beanstalkd
-    title='News for beanstalkd' rel=alternate type=application/atom+xml>
-  <script type="text/javascript" src="http://use.typekit.com/qgr2kmt.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <link href=http://feeds.feedburner.com/beanstalkd title='News for beanstalkd' rel=alternate type=application/atom+xml>
 </head>
 <body>
 
