layout/base: Adds protocol doc link to top menu
Fixes beanstalkd/beanstalkd#304

Signed-off-by: Thomas Parrott <tomp@tomp.uk>

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,6 +21,7 @@
     <li><a href=/download.html>Download</a>
     <li><a href=https://github.com/beanstalkd/beanstalkd/wiki/Client-Libraries>Client&nbsp;Libraries</a>
     <li><a href=https://github.com/beanstalkd/beanstalkd/wiki/FAQ>FAQ</a>
+    <li><a href=https://raw.githubusercontent.com/beanstalkd/beanstalkd/master/doc/protocol.txt>Protocol</a>
     <li><a href=https://groups.google.com/forum/#!forum/beanstalk-talk>Mailing&nbsp;List</a>
   </menu>
 </nav>
